--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,6 @@
     "axios": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "node-geocoder": "^4.4.0"
+    "express": "^4.19.2"
   }
 }
