--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "country-flag-icons": "^1.5.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
